# Full-stack-web-application

./: .env.docker.example  .gitignore  .pre-commit-config.yaml  API_KEY_ROTATION_IMPLEMENTATION.md  API_KEY_ROTATION_SETUP.md  API_KEY_SECURITY_REMEDIATION.md  AUTHENTICATION_FIX.md  AUTHENTICATION_FIX_REPORT.md  BETTER_ERROR_MESSAGES_REPORT.md  CHATBOT_FINAL_TEST_REPORT.md  CHATBOT_TEST_REPORT.md  CONNECTION_SETUP.md  CREATE_PULL_REQUEST.md  CREDENTIALS_ERROR_DEBUG.md  DB_AND_AUTH_FIX.md  DB_FIX.md  DEBUG_500_ERROR.md  ERROR_FIXES_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIXES_IMPLEMENTED.md  GEMINI.md  IMPROVEMENTS.md  LOGS_ARE_NEEDED.md  MERGE_COMPLETE.md  NEON_DB_FIX.md  OPENROUTER_IMPLEMENTATION.md  OPENROUTER_SETUP.md  QUICK_START_API_ROTATION.md  README.md  SECURE_SETUP.md  SECURITY_FIXES_REPORT.md  SECURITY_INCIDENT_RESPONSE.md  SECURITY_TEST_RESULTS.md  SERVERS_RUNNING.md  SERVERS_STATUS.md  SESSION_SUMMARY.md  SETUP_API_KEY.md  SIGNUP_FIXED.md  (+11 more)
backend/: .env.example  .env.new  .env.template  .gitignore  .vercelignore  Dockerfile  SECURITY.md  alembic.ini  api.py  pyproject.toml  pytest.ini  requirements.txt  run_backend.bat  setup_env.py  setup_key_rotation.py  start_backend.bat  start_server.py  tmpclaude-4750-cwd  validate_key_rotation.py  vercel.json  verify_security.py
backend/alembic/: env.py
backend/api/: index.py
backend/serverless/: index.py
backend/src/: auth.py  csrf.py  database.py  error_responses.py  main.py  sanitization.py  schemas.py  tmpclaude-32d2-cwd  utils.py
backend/tests/: __init__.py  conftest_integration.py  (+1 more)
(+171 files in other folders)
