[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlmodel>=0.0.31",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.21",
    "python-dotenv>=1.2.1",
    "alembic>=1.17.2"
]
